cmake_minimum_required(VERSION 3.20)
project(Codes)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)

add_executable(2000 2000.ASCII码排序.cpp)
add_executable(2001 2001.计算两点间距离.cpp)
add_executable(2002 2002.计算球体积.cpp)
add_executable(2003 2003.求绝对值.cpp)
add_executable(2004 2004.成绩转换.cpp)
add_executable(2005 2005.第几天？.cpp)
add_executable(2006 2006.求奇数的乘积.cpp)
#add_executable(2007 2007.平方和与立方和.cpp)
add_executable(2008 2008.数值统计.cpp)
add_executable(2009 2009.求数列的和.cpp)
add_executable(2010 2010.水仙花数.cpp)