cmake_minimum_required(VERSION 3.20)
project(Codes)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)

add_executable(2000 2000.cpp)
add_executable(2001 2001.cpp)
add_executable(2002 2002.cpp)
add_executable(2003 2003.cpp)
add_executable(2004 2004.cpp)
add_executable(2005 2005.cpp)
add_executable(2006 2006.cpp)
add_executable(2007 2007.cpp)
add_executable(2008 2008.cpp)
add_executable(2009 2009.cpp)
add_executable(2010 2010.cpp)
add_executable(2011 2011.cpp)
add_executable(2012 2012.cpp)
add_executable(2013 2013.cpp)
add_executable(2014 2014.cpp)
add_executable(2015 2015.cpp)
add_executable(2016 2016.cpp)
add_executable(2017 2017.cpp)
add_executable(2018 2018.cpp)
add_executable(2019 2019.cpp)
add_executable(2020 2020.cpp)
add_executable(2021 2021.cpp)
add_executable(2022 2022.cpp)
add_executable(2023 2023.cpp)
add_executable(2024 2024.cpp)
add_executable(2025 2025.cpp)
add_executable(2026 2026.cpp)
add_executable(2027 2027.cpp)
add_executable(2028 2028.cpp)
add_executable(2029 2029.cpp)
add_executable(2030 2030.cpp)
add_executable(2031 2031.cpp)
add_executable(2032 2032.cpp)
add_executable(2033 2033.cpp)